Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

20 September 2004 Menelaos Karavelas
- removed references to split and join operations when talking about the
  triangulation data structure concept

15 September 2004 Sylvain Pion
- Remove unused code to please g++ 2.95.

14 September 2004 Sylvain Pion
- Specialize Regular_traits_2<> for Exact_pred_inexact_const_kernel, so that
  it becomes automatically the filtered traits (and thus gets better backward
  compat).

13 September 2004 Sylvain Pion
- Regular traits cleanups.
- Added Regular_triangulation_filtered_traits_2.

7 September 2004 Menelaos Karavelas
- re-added commented code in join_vertices that was referring to degree
  2 vertices

6 September 2004 Menelaos Karavelas
- Documentation: moved join and split methods from the concept TDS_2 to the
  model of T_d_s_2
- Documentation: the methods insert_degree_2 and remove_degree_2 (from
  the Apollonius_graph_2 package) were added in T_d_s_2.
- Code: the methods insert_degree_2 and remove_degree_2 where moved from
  Apollonius_graph_data_structure_2 (obsolete) to
  Triangulation_data_structure_2.

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

1 September 2004 Mariette Yvinec
- fixed typo in doc : ref page of Triangulation_2

28 August 2004 Menelaos Karavelas
- added code for join_vertices and split_vertex methods
- added versions of join_vertices that take an Edge, an Edge_iterator and
  an Edge_circulator
- modified the TDS_2 user and ref manual in order to reflect the addition of
  the join and split operations (added corresponding figures and
  xfig source also)

25 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

24 August 2004 Mariette
- make tag dependant function in Triangulation_hierarchy_2
  a template  to reallow  explicit  instantiation in testsuite 

24 August 2004 Mariette