@@ -72,17 +72,8 @@ public:
             Weighted_converter_2<C2E>,
             Weighted_converter_2<C2F> >  Power_test_2;
 
-  typedef Filtered_predicate<
-            typename Exact_traits::Power_test_degenerated_2,
-            typename Filtering_traits::Power_test_degenerated_2,
-            Weighted_converter_2<C2E>,
-            Weighted_converter_2<C2F> >  Power_test_degenerated_2;
-
   Power_test_2 power_test_2_object() const
   { return Power_test_2();}
-
-  Power_test_degenerated_2 power_test_degenerated_2_object() const
-  { return Power_test_degenerated_2();}
 
   // The following are inherited since they are constructions :
   // Construct_weighted_circumcenter_2
